@@ -1,5 +1,6 @@
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
+	- permit multiple "Provides: " lines in rpmrc (#2999).
 
 3.0 -> 3.0.1
 	- fix: %verifyscript resurrected (Shing-Gene Yung).
